--- a/bioarch/DESCRIPTION
+++ b/bioarch/DESCRIPTION
@@ -1,8 +1,11 @@
 Package: bioarch
 Title: What the Package Does (one line, title case)
 Version: 0.0.0.9000
-Authors@R: person("First", "Last", email = "first.last@example.com", role = c("aut", "cre"))
-Description: What the package does (one paragraph)
-Depends: R (>= 3.2.0)
+Authors@R: person("Simon", "Hickinbotham", email = "simon.hickinbotham@york.ac.uk", role = c("aut", "cre"))
+Description: utilities for the bioarch dataset
+Depends: R (>= 3.0.0)
 License: What license is it under?
 LazyData: true
+Imports:
+    dplyr,
+    MALDIquant
