export Bruker by lotno added

--- a/bioarch/NAMESPACE
+++ b/bioarch/NAMESPACE
@@ -3,7 +3,8 @@
 export(ba_checkyn)
 export(ba_logspot)
 export(ba_ynq)
-export(exportLotDataSet)
+export(exportDataSetTab)
+export(exportLotData)
 export(getclass)
 export(loadBrukerXML)
 export(plotclass_v2)
