general tidy up - deleted some unused functions

--- a/bioarch/NAMESPACE
+++ b/bioarch/NAMESPACE
@@ -3,13 +3,11 @@
 export(ba_checkyn)
 export(ba_indexFromPlatePos)
 export(ba_loadBruker)
-export(ba_logspot)
 export(ba_ynq)
 export(bioarch_ExportLotData)
+export(bioarch_exportDataSetTab)
 export(bioarch_gsExportLotData)
+export(bioarch_loadBrukerXML)
 export(exportDataSetTab)
 export(exportLotData)
-export(getclass)
-export(loadBrukerXML)
 export(plotclass_v2)
-export(printUsage)
